--- a/index.html
+++ b/index.html
@@ -7,50 +7,66 @@
     <link rel="icon" href="../index.html">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./pages/style.css">
+    <link rel="stylesheet" href="./estilo.css">
     <title> Eli Ferraro </title>
 </head>
 <body>
-    <section class="grid-container">
-        <header>
-            <nav>
-                <ul class="menu">
-                    <li><a href="./index.html">INICIO</a></li>
-                    <li><a href="./pages/Pedidos.html">PEDIDOS</a></li>
-                    <li><a href="./pages/recetas_grids.html">RECETAS</a>
-                        <ul>
-                            <li><a href="./pages/recetas_grids.html">Alfajor maicena</a></li>
-                            <li><a href="./pages/recetas_grids.html">Mousse Chocolate</a></li>
-                            <li><a href="./pages/recetas_grids.html">Volcan Chocolate</a></li>
-                        </ul>
-                    </li>    
+    <main class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="./index.html"><img src="./fotos/Logo.png" width="100px" alt="eliferraroscatering"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/Pedidos.html">PEDIDOS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/recetas_grids.html">RECETAS</a>
                 </ul>
-            </nav>
-        </header>
-        <div class="logo">
-            <h1> <a href="./index.html"> <img src="./fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
-        </div>    
-        <main>
-            <div>
-                <p>
-                    <p class="info"> Mi nombre es Eli Ferraro y disfuto mucho cocinar, en especial cosas dulces. ¡Espero que las disfruten!</p>
-                </p>
-                <div>
-                    <p>
-                    <p class="texto" style="text-align: center"> Galería de Fotos 📸</p>
-                    </p>
+              </div>
+            </div>
+          </nav>
+          <header>
+              <img class="img-fluid" src="./fotos/fondo.jpg" alt="">
+              <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
-            </div>
-            <section class="FlexContainer">
-                <section class="foto1"><a href="./pages/Pedidos.html"><img src="./fotos/Mousse de chocolate - brownie.jpg" alt="Mousses" width="200px"></a></section>
-                <section class="foto2"><a href="./pages/Pedidos.html"><img src="./fotos/Torta personalizada.jpg" alt="Tortas Personalizadas" width="250px"></a></section>
-                <section class="foto3"><a href="./pages/Pedidos.html"><img src="./fotos/alfajores.jpg" alt="Alfajores" width="210px"></a></section>
-            </section>
-            <div class="videoyt">
-                <p class="texto2" style="text-align:center">Te enseño a hacer Mousse de Chocolate en este video! 👇🍫😋 </p>
-                <p class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/Ng93YpnyHro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-            </div>
-        </main>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./fotos/Mousse de chocolate - brownie 800.jpg" class="d-block w-100" alt="Mousse de Chocolate">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./fotos/Torta personalizada 2 800.jpg" class="d-block w-100" alt="Tortas personalizadas">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./fotos/alfajores prueba.jpg" class="d-block w-100" alt="Alfajores">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+          </header>
+    
+
+
+
+
+
         <footer>
             <div class="footer">
                 <h4>
@@ -62,6 +78,12 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </section>
+
+
+
+
+
+
 </body>
 </html>
 
