--- a/index.html
+++ b/index.html
@@ -7,65 +7,61 @@
     <link rel="icon" href="../index.html">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./estilo.css">
+    <link rel="stylesheet" href="../paginacomida_ferraro_bootstrap/estilo.css">
     <title> Eli Ferraro </title>
 </head>
 <body>
-    <main class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img src="./fotos/Logo.png" width="100px" alt="eliferraroscatering"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/Pedidos.html">PEDIDOS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/recetas_grids.html">RECETAS</a>
-                </ul>
-              </div>
-            </div>
-          </nav>
-          <header>
-              <img class="img-fluid" src="./fotos/fondo.jpg" alt="">
-              <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="./fotos/Mousse de chocolate - brownie 800.jpg" class="d-block w-100" alt="Mousse de Chocolate">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./fotos/Torta personalizada 2 800.jpg" class="d-block w-100" alt="Tortas personalizadas">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./fotos/alfajores prueba.jpg" class="d-block w-100" alt="Alfajores">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-          </header>
-    
-
-
-
-
+  <main class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"><img src="./fotos/Logo.png" width="150px" alt="eliferraroscatering"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/Pedidos.html">PEDIDOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/recetas_grids.html">RECETAS</a>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <header>
+      <img class="img-fluid" src="./fotos/fondo.jpg" alt="">
+      <div id="carouselExampleIndicators" class="carousel slide w-50 mx-auto" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./fotos/Mousse de chocolate - brownie 800.jpg" class="d-block w-100" alt="Mousse de Chocolate">
+          </div>
+          <div class="carousel-item">
+            <img src="./fotos/Torta personalizada 2 800.jpg" class="d-block w-100" alt="Tortas personalizadas">
+          </div>
+          <div class="carousel-item">
+            <img src="./fotos/alfajores 800.jpg" class="d-block w-100" alt="Alfajores">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>   
+   </header>
+  </main>  
 
         <footer>
             <div class="footer">
