--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../index.html">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../paginacomida_ferraro_bootstrap/estilo.css">
-    <title> Eli Ferraro </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../index.html">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="./estilo.css">
+  <title> Eli Ferraro </title>
 </head>
 <body>
-  <main class="container">
+  <main>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"><img src="./fotos/Logo.png" width="150px" alt="eliferraroscatering"></a>
+        <a class="navbar-brand" href="./index.html"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,13 +27,25 @@
               <a class="nav-link" href="./pages/Pedidos.html">PEDIDOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/recetas_grids.html">RECETAS</a>
+              <a class="nav-link" href="./pages/recetas.html">RECETAS</a>
           </ul>
         </div>
       </div>
     </nav>
-    <header>
-      <img class="img-fluid" src="./fotos/fondo.jpg" alt="">
+    <div class="logo" style="text-align: center;">
+      <h1> <a href="./index.html"> <img src="./fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
+   </div>
+   <div>
+      <p>
+        <p class="info" style="text-align: center;"> Mi nombre es Eli Ferraro y disfuto mucho cocinar, en especial cosas dulces. ¡Espero que las disfruten!</p>
+      </p>
+      <div>
+        <p>
+        <p class="texto" style="text-align: center"> Galería de Fotos 📸</p>
+        </p>
+      </div>
+   </div>
+    <div class="carousel"> 
       <div id="carouselExampleIndicators" class="carousel slide w-50 mx-auto" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -42,13 +54,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./fotos/Mousse de chocolate - brownie 800.jpg" class="d-block w-100" alt="Mousse de Chocolate">
+            <img src="./fotos/mousse chocolate.jpg" class="d-block w-100" alt="Mousse de Chocolate">
           </div>
           <div class="carousel-item">
-            <img src="./fotos/Torta personalizada 2 800.jpg" class="d-block w-100" alt="Tortas personalizadas">
+            <img src="./fotos/foto torta.jpg" class="d-block w-100" alt="Tortas personalizadas">
           </div>
           <div class="carousel-item">
-            <img src="./fotos/alfajores 800.jpg" class="d-block w-100" alt="Alfajores">
+            <img src="./fotos/foto alfajores.jpg" class="d-block w-100" alt="Alfajores">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -58,28 +70,20 @@
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-        </button>
-      </div>   
-   </header>
+        </button>  
+     </div>  
+    </div>
   </main>  
-
-        <footer>
-            <div class="footer">
-                <h4>
-                    <p><a href="./index.html"> Volver Arriba </a> </p>
-                    <p> Seguime en Instagram! <a href="https://www.instagram.com/eliferraroscatering/?hl=es-la"> <img src="./fotos/logoig.png" alt="Instagram" width="30px">@eliferraroscatering<a></p>
-                </h4>
-            </div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </section>
-
-
-
-
-
-
+  <footer>
+    <div class="footer">
+      <h4>
+        <p><a href="./index.html"> Volver Arriba </a> </p>
+        <p> Seguime en Instagram! <a href="https://www.instagram.com/eliferraroscatering/?hl=es-la"> <img src="./fotos/logoig.png" alt="Instagram" width="30px">@eliferraroscatering<a></p>
+      </h4>
+    </div>
+ </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
 
