--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../index.html">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilo.css">
-    <title> Recetas </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../index.html">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../estilo.css">
+  <title> Recetas </title>
 </head>  
 <body>
     <main>
@@ -42,41 +42,41 @@
         </div>
         <div id="carouselExampleCaptions" class="carousel slide w-75 mx-auto" data-bs-ride="carousel">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../fotos/foto alfajores.jpg" class="d-block w-100" alt="Alfajores de Maicena">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>ALFAJORES DE MAICENA</h5>
-                  <p> Tamizar la Maizena, la harina, el bicarbonato y el polvo de hornear. En un bowl, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien. En el mismo bowl, incorporar de a poco los ingredientes secos ya tamizados. Poner esencia de vainilla y ralladura de limón. Estirar la masa hasta que quede espesa, sobre harina. Cortar con molde circular. Formar los alfajores uniéndolos con dulce de leche. Pasarlos por coco rallado.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../fotos/mousse chocolate.jpg" class="d-block w-100" alt="Mousse de Chocolate">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>MOUSSE DE CHOCOLATE</h5>
-                  <p>Poner el chocolate y la manteca en un bowl y derretirlos en el microondas por dos minutos. Mezclar los ingredientes y poner dos yemas de huevo en el bowl. Poner dos claras de huevo en otro bowl con una pizca de sal. Batir hasta que se haga espuma. Batir con licuadora eléctrica hasta obtener una textura firme. Cuando se enfríe la mezcla de chocolate, ir echándola en varias tandas al bowl con las claras.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../fotos/foto volcan chocolate.jpg" class="d-block w-100" alt="volcan de Chocolate">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>VOLCÁN DE CHOCOLATE</h5>
-                  <p>Derretimos el chocolate con la manteca. En un bowl batimos los huevos con el azúcar. Incorporamos el chocolate derretido poco a poco y revolvemos. Tamizamos la harina y la añadimos al bowl. Enmantecamos los moldes, los llenamos unas ¾ partes y los congelamos. Los horneamos a 180º C durante 12 minutos. Lo puedes servir con helado de vainilla o crema y frutas de temporada.</p>
-                </div>
-              </div>
+                <div class="carousel-item active">
+                   <img src="../fotos/foto alfajores.jpg" class="d-block w-100" alt="Alfajores de Maicena">
+                   <div class="carousel-caption d-none d-md-block">
+                        <h5>ALFAJORES DE MAICENA</h5>
+                        <p> Tamizar la Maizena, la harina, el bicarbonato y el polvo de hornear. En un bowl, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien. En el mismo bowl, incorporar de a poco los ingredientes secos ya tamizados. Poner esencia de vainilla y ralladura de limón. Estirar la masa hasta que quede espesa, sobre harina. Cortar con molde circular. Formar los alfajores uniéndolos con dulce de leche. Pasarlos por coco rallado.</p>
+                   </div>
+               </div>
+               <div class="carousel-item">
+                    <img src="../fotos/mousse chocolate.jpg" class="d-block w-100" alt="Mousse de Chocolate">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>MOUSSE DE CHOCOLATE</h5>
+                      <p>Poner el chocolate y la manteca en un bowl y derretirlos en el microondas por dos minutos. Mezclar los ingredientes y poner dos yemas de huevo en el bowl. Poner dos claras de huevo en otro bowl con una pizca de sal. Batir hasta que se haga espuma. Batir con licuadora eléctrica hasta obtener una textura firme. Cuando se enfríe la mezcla de chocolate, ir echándola en varias tandas al bowl con las claras.</p>
+                    </div>
+               </div>
+               <div class="carousel-item">
+                    <img src="../fotos/foto volcan chocolate.jpg" class="d-block w-100" alt="volcan de Chocolate">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>VOLCÁN DE CHOCOLATE</h5>
+                      <p>Derretimos el chocolate con la manteca. En un bowl batimos los huevos con el azúcar. Incorporamos el chocolate derretido poco a poco y revolvemos. Tamizamos la harina y la añadimos al bowl. Enmantecamos los moldes, los llenamos unas ¾ partes y los congelamos. Los horneamos a 180º C durante 12 minutos. Lo puedes servir con helado de vainilla o crema y frutas de temporada.</p>
+                  </div>
+               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button> 
         </div>
     </main>
     <footer>
