--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -28,6 +28,7 @@
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -57,8 +58,8 @@
                <div class="carousel-item">
                     <img src="../fotos/mousse chocolate.jpg" class="d-block w-100" alt="Mousse de Chocolate">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>MOUSSE DE CHOCOLATE</h5>
-                      <p>Poner el chocolate y la manteca en un bowl y derretirlos en el microondas por dos minutos. Mezclar los ingredientes y poner dos yemas de huevo en el bowl. Poner dos claras de huevo en otro bowl con una pizca de sal. Batir hasta que se haga espuma. Batir con licuadora eléctrica hasta obtener una textura firme. Cuando se enfríe la mezcla de chocolate, ir echándola en varias tandas al bowl con las claras.</p>
+                        <h5>MOUSSE DE CHOCOLATE</h5>
+                        <p>Poner el chocolate y la manteca en un bowl y derretirlos en el microondas por dos minutos. Mezclar los ingredientes y poner dos yemas de huevo en el bowl. Poner dos claras de huevo en otro bowl con una pizca de sal. Batir hasta que se haga espuma. Batir con licuadora eléctrica hasta obtener una textura firme. Cuando se enfríe la mezcla de chocolate, ir echándola en varias tandas al bowl con las claras.</p>
                     </div>
                </div>
                <div class="carousel-item">
@@ -66,17 +67,17 @@
                     <div class="carousel-caption d-none d-md-block">
                       <h5>VOLCÁN DE CHOCOLATE</h5>
                       <p>Derretimos el chocolate con la manteca. En un bowl batimos los huevos con el azúcar. Incorporamos el chocolate derretido poco a poco y revolvemos. Tamizamos la harina y la añadimos al bowl. Enmantecamos los moldes, los llenamos unas ¾ partes y los congelamos. Los horneamos a 180º C durante 12 minutos. Lo puedes servir con helado de vainilla o crema y frutas de temporada.</p>
-                  </div>
+                   </div>
                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-            </button> 
+            </button>
         </div>
     </main>
     <footer>
@@ -87,5 +88,7 @@
             </h4>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
