mas cambios en codigo

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -83,7 +83,7 @@
     <footer>
         <div class="footer">
             <h4>
-                <p><a href="./recetas_grids.html"> Volver Arriba </a> </p>
+                <p><a href="../pages/recetas.html"> Volver Arriba </a> </p>
                 <p> Seguime en Instagram! <a href="https://www.instagram.com/eliferraroscatering/?hl=es-la"> <img src="../fotos/logoig.png" width="30px">@eliferraroscatering<a></p>
             </h4>
         </div>
