--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       <p class="texto2" style="text-align:center">Te enseño a hacer Mousse de Chocolate en este video! 👇🍫😋 </p>
       <p class="video" style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/Ng93YpnyHro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
   </div>
-  </main>  
+  </main>
+  <hr>  
   <footer class="footer" data-store="footer">
     <div class="container p-top-half visible-when-content-ready">
       <div class="row">
@@ -91,7 +92,7 @@
               <a class="footer-nav-link" href="./pages/recetas.html" >Recetas</a>
            </li>
            <li class="d-block m-bottom-half-xs">
-              <a class="footer-nav-link" href="../paginacomida_ferraro_bootstrap/index.html" >Volver Arriba</a>
+              <a class="footer-nav-link" href="./index.html" >Volver Arriba</a>
             </li>
          </ul>
        </div>
