--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
             <div class="seals-container col-xs-12 col-sm-2 col-md-2 col-lg-2 m-bottom">
               <h4 class="footer-title">Seguridad y Certificaciones</h4>
-              <a href=""><img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px"></a>
+                <img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px">
               <div class="custom-seals-container row">
                 <div class="custom-seal custom-seal-img container-fluid m-bottom-half">
                   <img src="//d3ugyf2ht6aenh.cloudfront.net/assets/themes/material/static/images/empty-placeholder.png?1339657641" data-src="//d3ugyf2ht6aenh.cloudfront.net/stores/413/750/themes/material/img-816516872-1558892769-263ebf0d8b1bf9d126a5677768cf24961558892769.jpg?1339657641" class="lazyload js-lazy-loading"/>
