--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -76,22 +76,22 @@
     <div class="container p-top-half visible-when-content-ready">
       <div class="row">
         <div class="footer-nav col-sm-2 col-md-2 col-lg-2 m-bottom">
-          <h4 class="footer-title">Navegación</h4>
+          <h4 class="footer-title" style="font-size: medium;">Navegación</h4>
           <ul class="p-none">
             <li class="d-block m-bottom-half-xs">
-              <a class="footer-nav-link" href="/" >Inicio</a>
+              <a class="footer-nav-link" href="/" style="font-size: small;">Inicio</a>
            </li>
            <li class="d-block m-bottom-half-xs">
-              <a class="footer-nav-link" href="../pages/Pedidos.html" >Pedidos</a>
+              <a class="footer-nav-link" href="../pages/Pedidos.html" style="font-size: small;">Pedidos</a>
            </li>
            <li class="d-block m-bottom-half-xs">
-              <a class="footer-nav-link" href="./recetas.html" >Volver Arriba</a>
+              <a class="footer-nav-link" href="./recetas.html" style="font-size: small;">Volver Arriba</a>
             </li>
          </ul>
        </div>
           <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
             <div class="seals-container col-xs-12 col-sm-2 col-md-2 col-lg-2 m-bottom">
-              <h4 class="footer-title">Seguridad y Certificaciones</h4>
+              <h4 class="footer-title"  style="font-size:medium;">Seguridad y Certificaciones</h4>
               <a href=""><img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px"></a>
               <div class="custom-seals-container row">
                 <div class="custom-seal custom-seal-img container-fluid m-bottom-half">
@@ -106,9 +106,9 @@
             <div class="row">
               <div class="powered-by col-sm-4 text-left text-center-xs m-top-half m-bottom-half">
              </div>
-             <div class="copyright-container col-sm-8 text-right text-center-xs m-top-half m-bottom-half">
+             <div class="copyright-container col-sm-8 text-right text-center-xs m-top-half m-bottom-half" style="font-size: medium;">
                 Copyright EliFerrarosCatering - 2022. Todos los derechos reservados.
-                <div class="claim-link d-inline-block m-left-quarter m-top-half-xs">
+                <div class="claim-link d-inline-block m-left-quarter m-top-half-xs" style="font-size: medium;">
                   Defensa de las y los consumidores. Para reclamos
                   <a class="weight-strong" href="https://www.argentina.gob.ar/produccion/defensadelconsumidor/formulario" target="_blank">ingrese aquí</a>
                 </div>
