cambios en codigo

--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../fotos/Logo.png">
-    <link rel="stylesheet" href="../Páginas/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <title> Pedidos </title>
 </head>
 <body>
@@ -13,12 +13,12 @@
         <nav>
             <ul class="menu">
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./Pedidos.html" target="_blank">Pedidos</a></li>
+                <li><a href="./pedidos.html" target="_blank">Pedidos</a></li>
                 <li><a href="./Recetas.html">Recetas</a>
                     <ul>
-                        <li><a href="./Recetas.html">Alfajor de Maicena</a></li>
-                        <li><a href="./Recetas.html">Mousse de Chocolate</a></li>
-                        <li><a href="./Recetas.html">Volcán de Chocolate</a></li>
+                        <li><a href="./recetas.html">Alfajor de Maicena</a></li>
+                        <li><a href="./recetas.html">Mousse de Chocolate</a></li>
+                        <li><a href="./recetas.html">Volcán de Chocolate</a></li>
                     </ul>
                </li>        
             </ul>
