--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -25,35 +25,36 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
-      <div class="logo" style="text-align: center;">
-        <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
-      </div> 
-      <div>
-        <p>
-          <p class="info" style="text-align: center;"> Te dejo algunas de mis recetas favoritas!! </p>
-        </p>
-     </div>
-      <div class="card-group">
-        <div class="card">
-          <img src="../fotos/foto alfajores.jpg" width="200px" class="card-img-top" alt="ALFAJOR DE MAICENA">
-          <div class="card-body">
-            <h5 class="card-title" style="text-align: center;">ALFAJOR DE MAICENA</h5>
-            <p class="card-text">Tamizar la Maizena, la harina, el bicarbonato y el polvo de hornear. En un bowl, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien. En el mismo bowl, incorporar de a poco los ingredientes secos ya tamizados. Poner esencia de vainilla y ralladura de limón. Estirar la masa hasta que quede espesa, sobre harina. Cortar con molde circular. Formar los alfajores uniéndolos con dulce de leche. Pasarlos por coco rallado.</p>
-          </div>
+    <div class="logo" style="text-align: center;">
+      <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
+    </div> 
+    <div>
+      <p>
+        <p class="info" style="text-align: center;"> Te dejo algunas de mis recetas favoritas!! </p>
+      </p>
+    </div>
+    <div class="card-group">
+      <div class="card">
+        <img src="../fotos/foto alfajores.jpg" width="200px" class="card-img-top" alt="ALFAJOR DE MAICENA">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">ALFAJOR DE MAICENA</h5>
+          <p class="card-text">Tamizar la Maizena, la harina, el bicarbonato y el polvo de hornear. En un bowl, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien. En el mismo bowl, incorporar de a poco los ingredientes secos ya tamizados. Poner esencia de vainilla y ralladura de limón. Estirar la masa hasta que quede espesa, sobre harina. Cortar con molde circular. Formar los alfajores uniéndolos con dulce de leche. Pasarlos por coco rallado.</p>
         </div>
-        <div class="card">
-          <img src="../fotos/foto volcan chocolate.jpg" class="card-img-top" alt="VOLCÁN DE CHOCOLATE">
-          <div class="card-body">
-            <h5 class="card-title" style="text-align: center;">VOLCÁN DE CHOCOLATE</h5>
-              <p class="card-text">Derretimos el chocolate con la manteca. En un bowl batimos los huevos con el azúcar. Incorporamos el chocolate derretido poco a poco y revolvemos. Tamizamos la harina y la añadimos al bowl. Enmantecamos los moldes, los llenamos unas ¾ partes y los congelamos. Los horneamos a 180º C durante 12 minutos. Lo puedes servir con helado de vainilla o crema y frutas de temporada.</p>
-          </div>
+      </div>
+      <div class="card">
+        <img src="../fotos/foto volcan chocolate.jpg" class="card-img-top" alt="VOLCÁN DE CHOCOLATE">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">VOLCÁN DE CHOCOLATE</h5>
+            <p class="card-text">Derretimos el chocolate con la manteca. En un bowl batimos los huevos con el azúcar. Incorporamos el chocolate derretido poco a poco y revolvemos. Tamizamos la harina y la añadimos al bowl. Enmantecamos los moldes, los llenamos unas ¾ partes y los congelamos. Los horneamos a 180º C durante 12 minutos. Lo puedes servir con helado de vainilla o crema y frutas de temporada.</p>
+        </div>
         </div>
         <div class="card">
           <img src="../fotos/mousse chocolate.jpg" class="card-img-top" alt="MOUSSE DE CHOCOLATE">
@@ -119,5 +120,7 @@
       </div>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
