--- a/pages/extend.html
+++ b/pages/extend.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>Mixin y Extend</title>
+    <title>EXTEND</title>
 </head>
 <body>
     <h1>EXTEND</h1>
