--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -69,7 +69,7 @@
         <img src="../fotos/panqueques.jpg" class="card-img-top" alt="PANQUEQUES DE DDL">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">PANQUEQUE DE DDL</h5>
-          <p class="card-text">Batir los huevos e incorporar la leche para batirr ambos juntos. Agregar harina y batir por 5 minutos. Poner en una sartén a fuego medio un cuchadrada de manteca. Vertir una o dos cucharadas de la mezcla sobre la sartén (que cubra toda la superficie de la misma). Cocinar por dos minutos y dar vuelta el panqueque hasta que esté de color dorado.</p>
+          <p class="card-text">Batir los huevos e incorporar la leche para batir ambos juntos. Agregar harina y batir por 5 minutos. Poner en una sartén a fuego medio un cuchadrada de manteca. Vertir una o dos cucharadas de la mezcla sobre la sartén (que cubra toda la superficie de la misma). Cocinar por dos minutos y dar vuelta el panqueque hasta que esté de color dorado.</p>
         </div>
       </div>
     </div>
