--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -65,16 +65,18 @@
                 </div>
                 <div class="ciudad">
                     <label for="Ciudad">Ciudad: </label>
-                    <select name="Ciudad" id="">
+                    <select name="Ciudad" id="ciudad">
                         <option value="none">Selec. Ciudad</option>
                         <option value="arg">Buenos Aires</option>
                         <option value="cba">Córdoba</option>
                         <option value="sfe">Santa Fe</option>
                     </select>
                 </div>
-                <div class="col-12">
-                  <a href="../pages/confirmado.html"><button type="submit" class="btn btn-primary">PEDIR</button></a>
-                </div>
+                <section class="boton">
+                    <div class="col-12">
+                      <button type="submit" class="boton btn btn-primary"><a href="../pages/confirmado.html">PEDIR</button></a>
+                    </div>
+                </section>
             </form>
         </section>
     </main>
