--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -90,6 +90,9 @@
            <li class="d-block m-bottom-half-xs">
               <a class="footer-nav-link" href="./recetas.html" style="font-size: small;">Volver Arriba</a>
             </li>
+            <li class="d-block m-bottom-half-xs">
+              <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
+           </li>
          </ul>
        </div>
           <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
