--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="videoyt">
       <p class="texto2" style="text-align:center">Te enseño a hacer Mousse de Chocolate en este video! 👇🍫😋 </p>
-      <p class="video" style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/Ng93YpnyHro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+      <p class="video"><iframe src="https://www.youtube.com/embed/Ng93YpnyHro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
    </div>
   </main>
   <hr>  
