--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -82,13 +82,13 @@
           <h4 class="footer-title" style="font-size: medium;">Navegación</h4>
           <ul class="p-none">
             <li class="d-block m-bottom-half-xs">
-              <a class="footer-nav-link" href="/" style="font-size: small;">Inicio</a>
+              <a class="footer-nav-link" href="/index.html" style="font-size: small;">Inicio</a>
            </li>
            <li class="d-block m-bottom-half-xs">
               <a class="footer-nav-link" href="../pages/Pedidos.html" style="font-size: small;">Pedidos</a>
            </li>
            <li class="d-block m-bottom-half-xs">
-              <a class="footer-nav-link" href="./recetas.html" style="font-size: small;">Volver Arriba</a>
+              <a class="footer-nav-link" href="../pages/recetas.html" style="font-size: small;">Volver Arriba</a>
             </li>
             <li class="d-block m-bottom-half-xs">
               <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
