--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -88,13 +88,13 @@
                     <h4 class="footer-title" style="font-size: medium;">Navegación</h4>
                     <ul class="p-none">
                         <li class="d-block m-bottom-half-xs">
-                            <a class="footer-nav-link" style="font-size: small;" href="./pages/Pedidos.html" >Pedidos</a>
+                            <a class="footer-nav-link" style="font-size: small;" href="../index.html" >Inicio</a>
                         </li>
                         <li class="d-block m-bottom-half-xs">
-                            <a class="footer-nav-link" style="font-size: small;" href="./pages/recetas.html" >Recetas</a>
+                            <a class="footer-nav-link" style="font-size: small;" href="../pages/recetas.html" >Recetas</a>
                         </li>
                          <li class="d-block m-bottom-half-xs">
-                            <a class="footer-nav-link" style="font-size: small;" href="./index.html" >Volver Arriba</a>
+                            <a class="footer-nav-link" style="font-size: small;" href="../pages/pedidos.html" >Volver Arriba</a>
                         </li>
                         <li class="d-block m-bottom-half-xs">
                           <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
