--- a/index.html
+++ b/index.html
@@ -39,13 +39,10 @@
       <h1> <a href="./index.html"> <img src="./fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
    </div>
    <div>
-      <p>
-        <p class="info" style="text-align: center;"> Mi nombre es Eli Ferraro y disfuto mucho cocinar, en especial cosas dulces. ¡Espero que las disfruten!</p>
-      </p>
+      <p class="negocio">ELI FERRARO'S CATERING</p>
+      <p class="info" style="text-align: center;"> Mi nombre es Eli Ferraro y disfuto mucho cocinar, en especial cosas dulces. ¡Espero que las disfruten!</p>
       <div>
-        <p>
         <p class="texto" style="text-align: center"> Galería de Fotos 📸</p>
-        </p>
       </div>
    </div>
     <div class="carousel"> 
