--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -38,6 +38,10 @@
         <div class="logo" style="text-align: center;">
             <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
         </div> 
+        <div>
+            <p class="negocio">ELI FERRARO'S CATERING</p>
+            <p class="info" style="text-align: center;"> Mi nombre es Eli Ferraro y disfuto mucho cocinar, en especial cosas dulces. ¡Espero que las disfruten!</p>
+        </div>
         <p class="textop">
             ¡Pedí lo que más te guste completando el siguiente formulario y nos contactaremos con vos!
         </p> 
