--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -38,6 +38,7 @@
     <div class="logo" style="text-align: center;">
       <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
     </div> 
+    <p class="negocio">ELI FERRARO'S CATERING</p>
     <div>
       <p>
         <p class="info" style="text-align: center;"> Te dejo algunas de mis recetas favoritas!! </p>
