--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1> <a href="./index.html"> <img src="./fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
     </div>
     <p class="negocio">ELI FERRARO'S CATERING</p>
-    <p class="info" style="text-align: center;"> Mi nombre es Eli Ferraro y disfuto mucho cocinar, en especial cosas dulces. ¡Espero que las disfruten!</p>
+    <p class="info" style="text-align: center"> Mi nombre es Eli Ferraro y disfuto mucho cocinar, en especial cosas dulces. ¡Espero que las disfruten!</p>
     <p class="texto" style="text-align: center"> Galería de Fotos 📸</p>
     <div class="carousel"> 
       <div id="carouselExampleIndicators" class="carousel slide w-50 mx-auto" data-bs-ride="carousel">
@@ -91,20 +91,20 @@
               <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
            </li>
            <li class="d-block m-bottom-half-xs">
-            <a class="footer-nav-link" style="font-size: small;" href="./index.html" >Volver Arriba</a>
+              <a class="footer-nav-link" style="font-size: small;" href="./index.html" >Volver Arriba</a>
            </li>
-         </ul>
+          </ul>
        </div>
-          <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <div class="seals-container col-xs-12 col-sm-2 col-md-2 col-lg-2 m-bottom">
-              <h4 class="footer-title" style="font-size: medium;">Seguridad y Certificaciones</h4>
-                <img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px">
-              <div class="custom-seals-container row">
-                <div class="custom-seal custom-seal-img container-fluid m-bottom-half">
-                  <img src="//d3ugyf2ht6aenh.cloudfront.net/assets/themes/material/static/images/empty-placeholder.png?1339657641" data-src="//d3ugyf2ht6aenh.cloudfront.net/stores/413/750/themes/material/img-816516872-1558892769-263ebf0d8b1bf9d126a5677768cf24961558892769.jpg?1339657641" class="lazyload js-lazy-loading"/>
-                </div>
+        <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
+          <div class="seals-container col-xs-12 col-sm-2 col-md-2 col-lg-2 m-bottom">
+            <h4 class="footer-title" style="font-size: medium;">Seguridad y Certificaciones</h4>
+            <img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px">
+            <div class="custom-seals-container row">
+              <div class="custom-seal custom-seal-img container-fluid m-bottom-half">
+                <img src="//d3ugyf2ht6aenh.cloudfront.net/assets/themes/material/static/images/empty-placeholder.png?1339657641" data-src="//d3ugyf2ht6aenh.cloudfront.net/stores/413/750/themes/material/img-816516872-1558892769-263ebf0d8b1bf9d126a5677768cf24961558892769.jpg?1339657641" class="lazyload js-lazy-loading"/>
               </div>
-           </div>
+            </div>
+          </div>
           </div>
        </div>
        <div class="footer-legal font-small-extra">
