--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -42,7 +42,7 @@
     <p class="info" style="text-align: center;"> Te dejo algunas de mis recetas favoritas!! </p>
     <div class="card-group">
       <div class="card">
-        <img src="../fotos/foto alfajores.jpg" width="200px" class="card-img-top" alt="ALFAJOR DE MAICENA">
+        <img src="../fotos/foto alfajores.jpg" class="card-img-top" alt="ALFAJOR DE MAICENA">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">ALFAJOR DE MAICENA</h5>
           <p class="card-text">Tamizar la Maizena, la harina, el bicarbonato y el polvo de hornear. En un bowl, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien. En el mismo bowl, incorporar de a poco los ingredientes secos ya tamizados. Poner esencia de vainilla y ralladura de limón. Estirar la masa hasta que quede espesa, sobre harina. Cortar con molde circular. Formar los alfajores uniéndolos con dulce de leche. Pasarlos por coco rallado.</p>
