--- a/pages/confirmado.html
+++ b/pages/confirmado.html
@@ -39,7 +39,7 @@
         <section class="confirm">
             <h1> ¡TU PEDIDO FUE REALIZADO CON ÉXITO! </h1>
             <p class="data"> Dentro de las próximas 24hrs te estará llegando un correo con los detalles de tu pedido.</h2>
-            <p class="data2"> ¡Gracias por tu compra! </h2>
+            <p class="data2"> ¡Gracias por confiar! </h2>
             <p class="empresa"> ELI FERRARO'S CATERING</h3>
         </section>
     </main>
