--- a/pages/confirmado.html
+++ b/pages/confirmado.html
@@ -60,7 +60,7 @@
               <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
             </li>
             <li class="d-block m-bottom-half-xs">
-              <a class="footer-nav-link" style="font-size: small;" href="./pedidos.html" >Volver a pedir</a>
+              <a class="footer-nav-link" style="font-size: small;" href="../pages/pedidos.html" >Volver a pedir</a>
             </li>
           </ul>
         </div>
