--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./fotos/Logo.png" width="50px">  </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -70,8 +70,8 @@
      </div>  
     </div>
     <div class="videoyt">
-      <p class="texto2" style="text-align:center">Te enseño a hacer Mousse de Chocolate en este video! 👇🍫😋 </p>
-      <iframe src="https://www.youtube.com/embed/Ng93YpnyHro" class="video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+      <p class="texto2" style="text-align:center"> Te enseño a hacer Mousse de Chocolate casero en el siguiente link! 👇🍫😋 </p>
+      <p class="link" style="text-align:center"><a href="https://www.youtube.com/embed/Ng93YpnyHro">https://www.youtube.com/embed/Ng93YpnyHro </a></p>
    </div>
   </main>
   <hr>  
