--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
      </div>  
     </div>
     <div class="videoyt">
-      <p class="texto2" style="text-align:center"> Te enseño a hacer Mousse de Chocolate casero en el siguiente link! 👇🍫😋 </p>
-      <p class="link" style="text-align:center"><a href="https://www.youtube.com/embed/Ng93YpnyHro">https://www.youtube.com/embed/Ng93YpnyHro </a></p>
+      <p class="texto2" style="text-align:center">Te enseño a hacer Mousse de Chocolate en este video! 👇🍫😋 </p>
+      <iframe src="https://www.youtube.com/embed/Ng93YpnyHro" class="video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
    </div>
   </main>
   <hr>  
