--- a/pages/recetapddl.html
+++ b/pages/recetapddl.html
@@ -71,7 +71,7 @@
               <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
            </li>
            <li class="d-block m-bottom-half-xs">
-              <a class="footer-nav-link" style="font-size: small;" href="./recetavdc.html" >Volver Arriba</a>
+              <a class="footer-nav-link" style="font-size: small;" href="../pages/recetas.html" >Volver A Recetas</a>
            </li>
           </ul>
        </div>
