--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -42,28 +42,28 @@
     <p class="info" style="text-align: center;"> Te dejo algunas de mis recetas favoritas!! </p>
     <div class="card-group">
       <div class="card">
-        <img src="../fotos/foto alfajores.jpg" class="card-img-top" alt="ALFAJOR DE MAICENA">
+        <a href="../pages/recetaadm.html"><img src="../fotos/foto alfajores.jpg" class="card-img-top" alt="ALFAJOR DE MAICENA"></a>
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">ALFAJOR DE MAICENA</h5>
           <p class="card-text">Tamizar la Maizena, la harina, el bicarbonato y el polvo de hornear. En un bowl, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien. En el mismo bowl, incorporar de a poco los ingredientes secos ya tamizados. Poner esencia de vainilla y ralladura de limón. Estirar la masa hasta que quede espesa, sobre harina. Cortar con molde circular. Formar los alfajores uniéndolos con dulce de leche. Pasarlos por coco rallado.</p>
         </div>
       </div>
       <div class="card">
-        <img src="../fotos/foto volcan chocolate.jpg" class="card-img-top" alt="VOLCÁN DE CHOCOLATE">
+        <a href="../pages/recetavdc.html"> <img src="../fotos/foto volcan chocolate.jpg" class="card-img-top" alt="VOLCÁN DE CHOCOLATE"></a>
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">VOLCÁN DE CHOCOLATE</h5>
           <p class="card-text">Derretimos el chocolate con la manteca. En un bowl batimos los huevos con el azúcar. Incorporamos el chocolate derretido poco a poco y revolvemos. Tamizamos la harina y la añadimos al bowl. Enmantecamos los moldes, los llenamos unas ¾ partes y los congelamos. Los horneamos a 180º C durante 12 minutos. Lo puedes servir con helado de vainilla o crema y frutas de temporada.</p>
         </div>
       </div>
       <div class="card">
-        <img src="../fotos/mousse chocolate.jpg" class="card-img-top" alt="MOUSSE DE CHOCOLATE">
+        <a href="../pages/recetamdc.html"><img src="../fotos/mousse chocolate.jpg" class="card-img-top" alt="MOUSSE DE CHOCOLATE"></a>
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">MOUSSE DE CHOCOLATE</h5>
           <p class="card-text">Poner el chocolate y la manteca en un bowl y derretirlos en el microondas por dos minutos. Mezclar los ingredientes y poner dos yemas de huevo en el bowl. Poner dos claras de huevo en otro bowl con una pizca de sal. Batir hasta que se haga espuma. Batir con licuadora eléctrica hasta obtener una textura firme. Cuando se enfríe la mezcla de chocolate, ir echándola en varias tandas al bowl con las claras.</p>
         </div>
       </div>
       <div class="card">
-        <img src="../fotos/panqueques.jpg" class="card-img-top" alt="PANQUEQUES DE DDL">
+        <a href="../pages/recetapddl.html"><img src="../fotos/panqueques.jpg" class="card-img-top" alt="PANQUEQUES DE DDL"></a>
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">PANQUEQUE DE DDL</h5>
           <p class="card-text">Batir los huevos e incorporar la leche para batir ambos juntos. Agregar harina y batir por 5 minutos. Poner en una sartén a fuego medio un cuchadrada de manteca. Vertir una o dos cucharadas de la mezcla sobre la sartén (que cubra toda la superficie de la misma). Cocinar por dos minutos y dar vuelta el panqueque hasta que esté de color dorado.</p>
