--- a/pages/recetaadm.html
+++ b/pages/recetaadm.html
@@ -53,6 +53,8 @@
         </div>
         <p class="recetatitulo" style="text-align:center">RECETA</p>
         <p style="text-align:center">Tamizar la Maizena, la harina, el bicarbonato y el polvo de hornear. En un bowl, batir la manteca con azúcar. Agregar las yemas de a una, mezclando bien. En el mismo bowl, incorporar de a poco los ingredientes secos ya tamizados. Poner esencia de vainilla y ralladura de limón. Estirar la masa hasta que quede espesa, sobre harina. Cortar con molde circular. Formar los alfajores uniéndolos con dulce de leche. Pasarlos por coco rallado.</p>
+        <p class="recetatitulo" style="text-align:center">INGREDIENTES</p>
+        <p class="tips" style="text-align:center">200g de manteca pomada - 200g azúcar impalpable - 2 yemas - 3 huevos - 1 cucharadita de esencia de vainilla - Ralladura de limón, opcional - 400g de almidón de maíz - 200g de harina 0000 (o si no usás harina, entonces van directo 600g de almidón de maíz) - 1 cucharadita de polvo de hornear al ras - 1 cucharadita de sal</p>
     </main>
     <hr>
     <footer class="footer" data-store="footer">
