--- a/pages/recetamdc.html
+++ b/pages/recetamdc.html
@@ -53,6 +53,8 @@
         </div>
         <p class="recetatitulo" style="text-align:center">RECETA</p>
         <p style="text-align:center">Poner el chocolate y la manteca en un bowl y derretirlos en el microondas por dos minutos. Mezclar los ingredientes y poner dos yemas de huevo en el bowl. Poner dos claras de huevo en otro bowl con una pizca de sal. Batir hasta que se haga espuma. Batir con licuadora eléctrica hasta obtener una textura firme. Cuando se enfríe la mezcla de chocolate, ir echándola en varias tandas al bowl con las claras.</p>
+        <p class="recetatitulo" style="text-align:center">INGREDIENTES</p>
+        <p class="tips" style="text-align:center"> 250g de chocolate negro o 70% cacao - 100g de manteca - 4 huevos medianos - 100g de azúcar (unas 8 cucharaditas).
     </main>
     <hr>
     <footer class="footer" data-store="footer">
