--- a/pages/recetavdc.html
+++ b/pages/recetavdc.html
@@ -53,6 +53,8 @@
         </div>
         <p class="recetatitulo" style="text-align:center">RECETA</p>
         <p style="text-align:center">Derretimos el chocolate con la manteca. En un bowl batimos los huevos con el azúcar. Incorporamos el chocolate derretido poco a poco y revolvemos. Tamizamos la harina y la añadimos al bowl. Enmantecamos los moldes, los llenamos unas ¾ partes y los congelamos. Los horneamos a 180º C durante 12 minutos. Lo puedes servir con helado de vainilla o crema y frutas de temporada.</p>
+        <p class="recetatitulo" style="text-align:center">INGREDIENTES</p>
+        <p class="tips" style="text-align:center">150g de chocolate cobertura - 150g de manteca - 5 huevos - 100g de azúcar - 70g de harina
     </main>
     <hr>
     <footer class="footer" data-store="footer">
