--- a/pages/recetapddl.html
+++ b/pages/recetapddl.html
@@ -53,6 +53,8 @@
         </div>
         <p class="recetatitulo" style="text-align:center">RECETA</p>
         <p style="text-align:center">Batir los huevos e incorporar la leche para batir ambos juntos. Agregar harina y batir por 5 minutos. Poner en una sartén a fuego medio un cuchadrada de manteca. Vertir una o dos cucharadas de la mezcla sobre la sartén (que cubra toda la superficie de la misma). Cocinar por dos minutos y dar vuelta el panqueque hasta que esté de color dorado.</p>
+        <p class="recetatitulo" style="text-align:center">INGREDIENTES</p>
+        <p class="tips" style="text-align:center"> 250cc de leche - 125g de harina 0000 - 2 huevos - 5g de sal - 20g de manteca fundida - 16 cucharadas de dulce de leche
     </main>
     <hr>
     <footer class="footer" data-store="footer">
