--- a/pages/recetavdc.html
+++ b/pages/recetavdc.html
@@ -39,7 +39,7 @@
             <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
         </div> 
         <p class="negocio">ELI FERRARO'S CATERING</p>
-        <p class="fotosrecetatexto" style="text-align:center"> FOTOS VOLCÁN DE CHOCOLATE </p>
+        <p class="fotosrecetatexto" style="text-align:center"> VOLCÁN DE CHOCOLATE </p>
         <div class="card-group">
             <div class="card">
               <img src="../fotos/foto volcan chocolate.jpg" class="card-img-top">
